# agentlex

./: CHANGELOG.md  INTEGRATIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agentlex/: __init__.py  cli.py  connect.py  kb.py  message.py  parse.py  terms.py
examples/: help.txt
tests/: test_agentlex.py  test_connect.py  test_kb.py
