[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlex"
version = "0.2.0"
description = "A symbolic agent-to-agent language — speech acts + unifiable symbolic terms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LicenseRef-COCL-1.0" }
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["agents", "multi-agent", "symbolic-ai", "nlp", "fipa-acl", "kqml", "unification", "a2a"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cognis-digital/agentlex"

[project.scripts]
agentlex = "agentlex.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["agentlex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
